tests/fixtures/typescript/expressions/spread/invalid_position/input_invalid_spread_subscript_seq.svelte
<script lang="ts">
	obj[a, ...b];
</script>
